# clipboard_server

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE.bazel  client.go  deps.bzl  go.work  go.work.sum  importpath.bzl  main.go  test_delete.go  test_getclipboards.go  test_subscribe.go  versions.bzl
check_alive/: BUILD.bazel  main.go
client/: BUILD.bazel  client.go  go.mod
client/mac/: BUILD.bazel  client.go  go.mod
clipboard_service/: clipboard_service.pb.go  clipboard_service.proto  clipboard_service_grpc.pb.go
proto/: BUILD.bazel  clipboard_service.pb.go  clipboard_service.proto  clipboard_service_grpc.pb.go  go.mod
server/: BUILD.bazel  go.mod  go.sum  main.go
server/message/: BUILD.bazel  command.go  message.go  response.go  types.go
test/: BUILD.bazel  go.mod  go.sum  test_bidirectional_stream.go  test_client.go  test_delete.go  test_getclipboards.go  test_send.go  test_subscribe.go  test_update.go
