load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "client_lib",
    srcs = ["client.go"],
    importpath = "github.com/1939323749/clipboard_server/client",
    visibility = ["//visibility:private"],
    deps = [
        "//proto",
        "@com_github_google_uuid//:uuid",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//types/known/fieldmaskpb",
    ],
)

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "lib",
    srcs = ["client.go"],
    importpath = "",
    visibility = ["//visibility:private"],
    deps = [
        "//proto",
        "@com_github_google_uuid//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
