load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_proto_library(
    name = "v1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/1939323749/clipboard_server/proto",
    proto = ":proto_proto",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "proto_proto",
    srcs = ["clipboard_service.proto"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    embed = [":v1_go_proto"],
    importpath = "github.com/1939323749/clipboard_server/proto",
    visibility = ["//visibility:public"],
)
