load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "test_lib",
    srcs = [
        "test_delete.go",
        "test_getclipboards.go",
        "test_send.go",
        "test_subscribe.go",
    ],
    importpath = "github.com/1939323749/clipboard_server/test",
    visibility = ["//visibility:private"],
    deps = [
        "//proto",
        "@com_github_google_uuid//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "test",
    embed = [":test_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "lib",
    srcs = [
        "test_delete.go",
        "test_getclipboards.go",
        "test_send.go",
        "test_subscribe.go",
    ],
    importpath = "",
    visibility = ["//visibility:private"],
    deps = [
        "//proto",
        "@com_github_google_uuid//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
