load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "mac_lib",
    srcs = ["client.go"],
    importpath = "github.com/1939323749/clipboard_server/client/mac",
    visibility = ["//visibility:private"],
    deps = [
        "//proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)

go_binary(
    name = "mac",
    embed = [":mac_lib"],
    visibility = ["//visibility:public"],
)
